state_class_task/route_table_assoc.tf
resource "aws_route_table_association" "b1" {
  subnet_id      = "${aws_subnet.public1.id}"
  route_table_id = "${aws_route_table.r.id}"
}
resource "aws_route_table_association" "b2" {
  subnet_id      = "${aws_subnet.public2.id}"
  route_table_id = "${aws_route_table.r.id}"
}
resource "aws_route_table_association" "b3" {
  subnet_id      = "${aws_subnet.public3.id}"
  route_table_id = "${aws_route_table.r.id}"
}

# resource "aws_route_table_association" "b1" {
#   subnet_id      = "${aws_subnet.main.id}"
#   route_table_id = "${aws_route_table.r.id}"
# }
# resource "aws_route_table_association" "b2" {
#   subnet_id      = "${aws_subnet.main.id}"
#   route_table_id = "${aws_route_table.r.id}"
# }
# resource "aws_route_table_association" "b3" {
#   subnet_id      = "${aws_subnet.main.id}"
#   route_table_id = "${aws_route_table.r.id}"
# }
